# meshbeam

./: .gitmodules  README.md  pyproject.toml  run_app.py
app/: __init__.py  callbacks.py  layout.py  main.py  plot_2d.py  plot_3d.py
app/assets/: style.css
beamshaper/: __init__.py  analytical.py  aspheric.py  export_stl.py  gbd_optimizer.py  gbd_simulator.py  jax_tracer.py  long_throw.py  optimizer.py  profiles.py  tabulated_tracer.py  two_lens.py  visualize_system.py  wave_optics.py
beamshaper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mesh-optics-master/: README.md  analysis.py  demo.py  geometry.py  math_utils.py  ray_sources.py  ray_tracer.py  requirements.txt  visualization.py
output/: beam_shaper_fiber_direct.html  beam_shaper_visualization.html  design_report.txt  gbd_beam_shaper_analysis.html  gbd_collimated_vs_diverging.html  gbd_optimized_comparison.html  lens1_sag.csv  lens2_sag.csv
output_20mm_softedge/: full_data.npz  gbd_hires.npz  gbd_hires_comparison.html  hard_vs_soft_edge.html  lens1_sag.csv  lens2_sag.csv
output_collimated/: collimated_beam_shaper_analysis.html  full_data.npz  lens1_sag.csv  lens2_sag.csv
output_long_throw_pm780/: design_spec.md  lens1_sag.csv  lens2_sag.csv  performance_2td_gbd_data.npz  performance_data.npz  pm780_long_throw_2td_1d_profiles.csv  pm780_long_throw_2td_1d_profiles.html  pm780_long_throw_2td_gbd.html  pm780_long_throw_visualizer.html
